# RadarRT-DSP

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
cmake/: Sanitizers.cmake  Warnings.cmake
cmake/toolchains/: aarch64-linux-gnu.cmake.example
docs/: diagrams.md  interview.md
include/radar/: application.hpp  clock.hpp  config.hpp  console_sink.hpp  diagnostics.hpp  exceptions.hpp  fft.hpp  file_sink.hpp  heartbeat.hpp  heartbeat_registry.hpp  log_record.hpp  log_sink.hpp  logger.hpp  managed_thread.hpp  manual_clock.hpp  metrics.hpp  noise_filter.hpp  pi_mutex.hpp  processed_signal.hpp  radar_producer.hpp  radar_signal.hpp  random_generator.hpp  realtime_manager.hpp  shutdown_token.hpp  signal_handler.hpp  signal_processor.hpp  signal_source.hpp  steady_clock.hpp  target_detection.hpp  thread_pool.hpp  thread_safe_queue.hpp  watchdog.hpp
src/: CMakeLists.txt  application.cpp  clock.cpp  config.cpp  console_sink.cpp  data_model.cpp  diagnostics.cpp  exceptions.cpp  fft.cpp  file_sink.cpp  heartbeat_registry.cpp  logger.cpp  managed_thread.cpp  metrics.cpp  pi_mutex.cpp  radar_producer.cpp  random_generator.cpp  realtime_manager.cpp  shutdown_token.cpp  signal_handler.cpp  signal_processor.cpp  thread_pool.cpp  thread_safe_queue.cpp  watchdog.cpp
tests/: .clang-tidy  CMakeLists.txt  test_heartbeat.cpp  test_managed_thread.cpp  test_shutdown_token.cpp  test_synchronization.cpp  test_thread_safe_queue.cpp  test_watchdog.cpp
tests/framework/: test_framework.cpp  test_framework.hpp
